Issue #12919 - Fix - Multiple widgets placed spacing issue (#12926)
* Issue #12919 - fixed spacing issue after each widget

* Issue #12919 - fixed a11y error

--- a/profile/themes/clean/scss/components/_navbar.scss
+++ b/profile/themes/clean/scss/components/_navbar.scss
@@ -1,7 +1,7 @@
 /**** navbar background ****/
 .navbar-collapse {
   border: 1px solid $color-light-gray1;
-  @include nav($color-white,$color-green,$color-light-gray,$color-green,$color-green,$color-gray1,$color-white,$color-green,$color-green,12px,700,16px,700);
+  @include nav($color-white,$color-green,$color-light-gray,$color-green1,$color-green1,$color-gray1,$color-white,$color-green,$color-green,12px,700,16px,700);
   /***** navbar nav *****/
   .navbar-nav {
     > li {
