--- a/profile/themes/hwpi_college/scss/global/_global.scss
+++ b/profile/themes/hwpi_college/scss/global/_global.scss
@@ -59,7 +59,6 @@ h2.block-title {
   .content-inner {
     .block {
       border-top: 4px solid $color-regent-gray;
-      margin-bottom: 20px;
       padding-top: 15px;
     }
   }
