--- a/profile/themes/os_base/scss/base/_base.scss
+++ b/profile/themes/os_base/scss/base/_base.scss
@@ -17,6 +17,12 @@
       line-height: 1.2em;
     }
   }
+  .block {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 .field--name-body {
   ol ul {
